<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@drawable/ic_account_balance_wallet_black_24dp"
        android:title="Transactions"
        android:id="@+id/transaction_nav"/>

    <item
        android:icon="@drawable/ic_add_circle_outline_black_24dp"
        android:id="@+id/add_transaction_nav"
        android:title="Add Transaction"/>
    <item
        android:icon="@drawable/ic_pie_chart_black_24dp"
        android:title="Report"
        android:id="@+id/report_nav"/>
    <item
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="Account"
        android:id="@+id/account_nav"/>



</menu>