<resources>
    <string name="app_name">Budgetly</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="user_name">Name</string>
    <string name="select_category">Select category</string>
    <string name="enter_price">Enter price</string>
    <string name="select_date">Select date</string>
    <string name="add_transaction">Add transaction</string>
    <string name="write_note">Write note</string>
    <string name="tab_text1">DEBT &amp; LOAN</string>
    <string name="tab_text2">EXPENSE</string>
    <string name="tab_text3">INCOME</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="additional_data">Additional data</string>
    <string name="popup">popup</string>
    <string name="title_activity_repeating">RepeatingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="notifications">Notifications</string>
    <string name="notify_on">Notify ON</string>
    <string name="notify_off">Notify OFF</string>
</resources>
